<resources>
    <string name="app_name">Agenda</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_endereco">Endereço</string>
    <string name="campo_telefone">Telefone</string>
    <string name="campo_email">E-mail</string>
    <string name="campo_site">Site</string>
    <string name="menu_enviar_alunos">Enviar alunos</string>
    <string name="menu_baixar_provas">Baixar provas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_vizualizar_mapa">Visualizar no mapa</string>
</resources>
