<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">
            <ImageView android:id="@+id/novo_aluno_imagem"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/person"
                android:background="#00A8EC"/>

            <Button android:id="@+id/novo_aluno_camera"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/fundo_camera"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"/>
        </RelativeLayout>

        <EditText android:id="@+id/novo_aluno_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_nome" />

        <EditText android:id="@+id/novo_aluno_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_endereco" />

        <EditText android:id="@+id/novo_aluno_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_telefone" />

        <EditText android:id="@+id/novo_aluno_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_email" />

        <EditText android:id="@+id/novo_aluno_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_site" />

        <RatingBar android:id="@+id/novo_aluno_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="10"
            android:numStars="5" />
    </LinearLayout>
</ScrollView>